@@ -1,5 +1,6 @@
 1.13.1 /
 [Alexandr Topilski]
+- SSH input checks
 
 1.13.0 / December 14, 2017
 [Alexandr Topilski]
