@@ -1,5 +1,6 @@
 1.14.1 /
 [Alexandr Topilski]
+- [Redis] SSH input checks
 
 1.14.0 / December 14, 2017
 [Alexandr Topilski]
